--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 html, body, #root {
   margin: 0;
   font-family: 'Montserrat', 'Poppins', sans-serif;
+  font-size: medium;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-padding-top: 80px;
@@ -14,4 +15,10 @@ input, textarea, button {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+@media (max-width: 768px) {
+  html, body, #root{
+    font-size: small;
+  }
 }
